# llm-sample

./: .gitignore  README.md  main.py  pyproject.toml
core/functioncall/: bot.py  openai.py  searcher.py  tools.py
core/langchain/: example.py
docs/: index.md  marp.md
jupyter/: lanchain-toolcalling.ipynb  langchain-rag-advanced.ipynb  langchain-rag.ipynb  langchain.ipynb  langgraph.ipynb  openai-toolcalling.ipynb
jupyter/data/: langchain-rag-news-url-eval.csv  langchain-rag-news-url.jsonl
